--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@
     left: 50%;
     transform: translate(-50%,-50%);
 }
+
+.border-all  * {
+    border: 2px solid black;
+    padding: 0rem 0.5rem;
+    text-align: center;
+}
